--- a/Index.html
+++ b/Index.html
@@ -193,7 +193,7 @@
         <div class="row justify-content-evenly px-4">
           <div class="post col-md-4 game all col-10 mt-3 mt-md-0" data-aos="fade-up">
             <div class="card">
-              <img src="image/code.jpg" class="card-img-top" alt="..." />
+              <img src="code.jpg" class="card-img-top" alt="..." />
               <div class="card-body text-center">
                 <h4 class="card-title">Coding World</h4>
                 <span class="badge bg-secondary badge-pill">HTML&CSS</span>
@@ -206,7 +206,7 @@
           <div class="post col-md-4 website all col-10 mt-3 mt-md-0" data-aos="fade-up">
             <div class="card">
               <img
-                src="image/Emps.png"
+                src="Emps.png"
                 class="card-img-top"
                 alt="..."
               />
@@ -223,7 +223,7 @@
           <div class="post col-md-4 website all col-10 mt-3 mt-md-0" data-aos="fade-up">
             <div class="card">
               <img
-                src="image/hostelbill.jpg" height="267px" class="card-img-top"alt="..."/>
+                src="hostelbill.jpg" height="267px" class="card-img-top"alt="..."/>
               <div class="card-body text-center">
                 <h4 class="card-title">Hotel Billing System</h4>
                 <span class="badge bg-secondary badge-pill">C#</span>
@@ -238,7 +238,7 @@
         <div class="row justify-content-evenly mt-4 px-4">
           <div class="post col-md-4 game all col-10 mt-3 mt-md-0" data-aos="fade-up">
             <div class="card">
-              <img src="image/asp.jpg" class="card-img-top" alt="..." />
+              <img src="asp.jpg" class="card-img-top" alt="..." />
               <div class="card-body text-center">
                 <h4 class="card-title">ASP Project</h4>
                 <span class="badge bg-secondary badge-pill">C#</span>
@@ -250,7 +250,7 @@
           </div>
           <div class="post col-md-4 website all col-10 mt-3 mt-md-0" data-aos="fade-up">
             <div class="card">
-              <img src="image/asp.jpg" class="card-img-top" alt="..." />
+              <img src="asp.jpg" class="card-img-top" alt="..." />
               <div class="card-body text-center">
                 <h4 class="card-title">ASP MVC Project</h4>
                 <span class="badge bg-secondary badge-pill">C#</span>
@@ -263,7 +263,7 @@
           <div class="post col-md-4 all col-10 mt-3 mt-md-0" data-aos="fade-up">
             <div class="card">
               <img
-                src="image/asp.jpg"
+                src="asp.jpg"
                 class="card-img-top"
                 alt="..."
               />
