--- a/Index.html
+++ b/Index.html
@@ -216,7 +216,7 @@
                 <span class="badge bg-secondary badge-pill">Ado.Net</span>
                 <span class="badge bg-secondary badge-pill mb-2">Sql</span><br />
                 
-                <a href="C:\\Users\\krish\\Downloads\\Employee Management System.pdf" class="read-more-btn link">Read More</a>
+                <a href="Employee Management System.pdf" class="read-more-btn link">Read More</a>
               </div>
             </div>
           </div>
